--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,10 @@ dist-ssr
 
 # Environment variables
 .env
-.env.local
-.env.development
-.env.test
-.env.production
+.env.*
+!.env.example  # useful if you want to share a template
 
-# Editor directories and files
+# Editor files
 .vscode/*
 !.vscode/extensions.json
 .idea
